# bleauinfo-scraper

./: .gitignore  README.md  bleau_info.db  database.py  main.py  main_analitics.py  pyproject.toml
analytics/: analytics.py
models/: area.py  boulder.py  grade.py  region.py  repetition.py  user.py
scraper/: main.py
scraper/analytics/: analytics.py
scraper/scraping/: area_scraping.py  boulder_scraping.py  scraping.py
scraping/: area_scraping.py  boulder_scraping.py  fetch.py  scraping.py  util.py
shared/: database.py
shared/models/: area.py  boulder.py  grade.py  region.py
