[tool.poetry]
name = "bleau-info-scraping"
version = "0.1.0"
description = ""
authors = ["cmareau-git <charles_mareau@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
bs4 = "^0.0.2"
unidecode = "^1.3.8"
sqlalchemy = "^2.0.40"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
