[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cmareau-git <charles_mareau@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
bs4 = "^0.0.2"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
